Update 1.3 Check that during joke upload the title and content is populated Show progress bar during initialization

--- a/Hindi Jokes/Hindi Jokes.Shared/Assets/about.html
+++ b/Hindi Jokes/Hindi Jokes.Shared/Assets/about.html
@@ -11,7 +11,7 @@ This application downloads data for offline usage.
 
 <h2>About Hanu-Droid Framework</h2>
 This application is developed using the <a href="http://hanu-droid.varunverma.org">Hanu-Droid </a> framework. 
-The Hanu-Droid framework allows you to develop android applications within few minutes. 
+The Hanu-Droid framework allows you to develop android and windows applications within few minutes. 
 You need not worry about coding, just concentrate on content creation.
 
 <h2>About Company</h2>
