--- a/Hindi Jokes/Hindi Jokes.Shared/Assets/eula.html
+++ b/Hindi Jokes/Hindi Jokes.Shared/Assets/eula.html
@@ -6,7 +6,7 @@
 
 <h2>END-USER LICENSE AGREEMENT FOR "Hindi Jokes App"</h2>
 <b>IMPORTANT PLEASE READ THE TERMS AND CONDITIONS OF THIS LICENSE AGREEMENT CAREFULLY BEFORE CONTINUING WITH THIS APP INSTALL:</b><br><br>
-Hindi Jokes App's End-User License Agreement ("EULA") is a legal agreement between you (either an individual or a single entity) and Ayansh TechoSoft Pvt. Ltd. (here on referred as Developer of this app) for the Ayansh TechoSoft Pvt. Ltd.'s Android application(s) identified above which may include associated software components, media, printed materials, and "online" or electronic documentation ("SOFTWARE PRODUCT").<br><br>
+Hindi Jokes App's End-User License Agreement ("EULA") is a legal agreement between you (either an individual or a single entity) and Ayansh TechoSoft Pvt. Ltd. (here on referred as Developer of this app) for the Ayansh TechoSoft Pvt. Ltd.'s Windows application(s) identified above which may include associated software components, media, printed materials, and "online" or electronic documentation ("SOFTWARE PRODUCT").<br><br>
 By installing, copying, or otherwise using "Hindi Jokes" (here on also referred as APP or Application), you agree to be bound by the terms of this EULA.<br>
 This license agreement represents the entire agreement concerning the program between you and the developer, (referred to as "licenser"), and it supersedes any prior proposal, representation, or understanding between the parties. If you do not agree to the terms of this EULA, do not install or use this APP.
 <br><br>
@@ -15,7 +15,7 @@ This APP is protected by copyright laws and international copyright treaties, as
 <h3>GRANT OF LICENSE</h3>
 This APP (Hindi Jokes) is licensed as follows:<br>
 <b>(a) Installation and Use.</b><br>
-The Developer grants you the right to install and use this App on your Android phone running a validly licensed copy of the Android operating system for which this application was designed.<br><br>
+The Developer grants you the right to install and use this App on your Windows Device running a validly licensed copy of the Windows operating system for which this application was designed.<br><br>
 <b>(b) Backup Copies.</b><br>
 You may make copies of this APP as may be necessary for backup and archival purposes only.
 
